--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,32 @@ nav{
 	background:#2f3640;
 	width:100%;
 	height: 50px;
+}
+
+.nav {
+	display: flex;
+	justify-content: center;
+}
+
+.submit {
+	background: none;
+	color: white;
+	height: 50px;
+	border: none;
+	font-size: 25px;
+	height: 50px;
+	outline: none;
+}
+
+.search {
+	width: 200px;
+	background: none;
+	border-radius: 10px;
+	border-color: black;
+	outline: none;
 	text-align: center;
+	color: white;
+	font-size: 24px;
 }
 
 .nav-btn {
@@ -30,9 +55,11 @@ nav{
 	border: none;
 	font-size: 25px;
 	width: 200px;
+	outline: none;
 }
 
-.nav-btn:hover {
+.nav-btn:hover,
+.submit:hover {
 	background-color: #353b48;
 }
 
