--- a/css/main.css
+++ b/css/main.css
@@ -145,5 +145,57 @@ footer {
 	background-color: black;
 	height: 40px;
 	text-align: right;
-	padding-right: 22%
+	padding-right: 22%;
+}
+
+.price {
+    padding: 0 20px;
+    height: 55px;
+    background: #000;
+    text-align: center;
+    font-weight: 700;
+    font-size: 16px;
+    color: #fff;
+}
+
+.ell {
+	width: 100%;
+	border: none;
+	background: none;
+	font-size: 25px;
+	transition: 0.3s;
+}
+
+.ell:hover {
+	background-color: black;
+	color: #fff;
+}
+
+.img {
+    background: #e6e8e7;
+    width: 370px;
+    height: 370px;
+    text-align: center;
+    position: relative;
+    border: 1px solid black;
+    border-bottom: none;
+	border-radius: 10px 10px 0px 0px;
+}
+
+.name {
+    height: 55px;
+    line-height: 56px;
+    text-align: center;
+    overflow: hidden;
+    border: 1px solid black;
+    font-size: 13px;
+    transition: .5s;
+    background: #fff;
+    width: 100%;
+    display: flex;
+	border-radius: 0px 0px 10px 10px;
+}
+
+.shop {
+	margin-bottom: 20px;
 }
