--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,15 @@
 html, body {
-
 	height: 100%;
 }
+
 body {
-	background-color: #ecf0f1;	
+	background-color: #ecf0f1;
 }
 
 header {
 	height: 20%;
 	position: relative;
-	background-color: #353b48;
+	background-color: #000;
 	text-align: center;
 }
 
@@ -17,7 +17,7 @@ nav{
 	z-index: 100;
 	top:0;
 	left:0;
-	background:#2f3640;
+	background: #2d3436;
 	width:100%;
 	height: 50px;
 }
@@ -55,27 +55,15 @@ nav{
 	border: none;
 	font-size: 25px;
 	width: 200px;
-	outline: none;
 	transition: 0.3s;
+	outline: none;
 }
 
 #genre-btn {
 	width: 50px;
 	margin-right: 10px;
 	padding-top: 10px;
-}
-
-@media (min-width: 1000px) {
-	#genre-btn{
-		visibility: hidden;
-		display: none;
-	}
-}
-@media (max-width: 999px) {
-	.nav-btn {
-		visibility: hidden;
-		display: none;		
-	}
+	outline: none;
 }
 
 #genre-btn span {
@@ -87,7 +75,7 @@ nav{
 }
 
 #vipad {
-	background:#2f3640;
+	background:#2d3436;
 }
 
 .vipad-btn {
@@ -97,14 +85,14 @@ nav{
 	border: none;
 	font-size: 25px;
 	width: 100%;
-	outline: none;
 	transition: 0.3s;
+	outline: none;
 }
 
 .nav-btn:hover,
 .submit:hover,
 .vipad-btn:hover {
-	background-color: #353b48;
+	background-color: #1e272e;
 }
 
 .logo {
@@ -140,22 +128,34 @@ nav{
 	color: white;
 }
 
+#btn {
+	background: none;
+	transition: 0.3s;
+	font-size: 25px;
+	border: 1px solid black;
+	border-radius: 5px;
+	margin: 5px;
+	text-decoration: none;
+	color: black;
+	outline: none;
+}
+
 footer {
 	margin-top: 5%;
-	background-color: black;
+	background-color: #000;
 	height: 40px;
 	text-align: right;
 	padding-right: 22%;
 }
 
 .price {
-    padding: 0 20px;
-    height: 55px;
-    background: #000;
-    text-align: center;
-    font-weight: 700;
-    font-size: 16px;
-    color: #fff;
+	padding: 0 20px;
+	height: 55px;
+	background: #000;
+	text-align: center;
+	font-weight: 700;
+	font-size: 16px;
+	color: #fff;
 }
 
 .ell {
@@ -166,36 +166,151 @@ footer {
 	transition: 0.3s;
 }
 
-.ell:hover {
+.ell:hover,
+#btn:hover,
+.button-primary:hover {
 	background-color: black;
 	color: #fff;
 }
 
 .img {
-    background: #e6e8e7;
-    width: 370px;
-    height: 370px;
-    text-align: center;
-    position: relative;
-    border: 1px solid black;
-    border-bottom: none;
+	max-height: 512px;
+	max-width: 512px;
+	background: #e6e8e7;
+	text-align: center;
+	position: relative;
+	border: 1px solid black;
+	border-bottom: none;
 	border-radius: 10px 10px 0px 0px;
+	transition: 0.3s;
+}
+
+.img:hover {
+	filter: brightness(30%);
+}
+
+.img-tov {
+	max-height: 512px;
+	max-width: 512px;
 }
 
 .name {
-    height: 55px;
-    line-height: 56px;
-    text-align: center;
-    overflow: hidden;
-    border: 1px solid black;
-    font-size: 13px;
-    transition: .5s;
-    background: #fff;
-    width: 100%;
-    display: flex;
+	height: 55px;
+	line-height: 56px;
+	text-align: center;
+	overflow: hidden;
+	border: 1px solid black;
+	font-size: 13px;
+	transition: .5s;
+	background: #fff;
+	width: 100%;
+	display: flex;
 	border-radius: 0px 0px 10px 10px;
 }
 
 .shop {
+	width: 370px;
 	margin-bottom: 20px;
+}
+
+#modal {
+	margin-bottom: 1%;
+	margin-top: 1%;
+}
+
+#dropdown-menu {
+	background-color: #2d3436;
+}
+
+#dropdown-menu2 {
+	background-color: #2d3436;
+	width: 100%;
+}
+
+@media (min-width: 1000px) {
+	#genre-btn{
+		visibility: hidden;
+		display: none;
+	}
+}
+
+@media (max-width: 999px) {
+	.nav-btn {
+		visibility: hidden;
+		display: none;
+	}
+}
+
+@media (max-width: 700px) {
+	.logo {
+		width: 100%;
+	}
+}
+
+@media (max-width: 800px) {
+	.basket {
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+		border: none;
+		height: 500px;
+		padding: 0;
+	}
+	.text {
+		display: flex;
+		align-items: center;
+		justify-content: center;
+		flex-direction: column;
+	}
+	.basket-img {
+		width: 150px;
+		height: 150px;
+	}
+}
+
+.basket {
+	border-radius: 10px;
+	background-color: white;
+	margin: 5px;
+	overflow: hidden;
+	border-style: solid;
+	border-color: black;
+	border-width: 0.7px;
+	display: flex;
+}
+
+.button-primary {
+	background: none;
+	transition: 0.3s;
+	color: black;
+	border-style: solid;
+	margin: 5px;
+	height: 100px;
+	font-size: 35px;
+	border: 1px solid black;
+	border-radius: 10px;
+	outline: none;
+}
+
+.basket-img {
+	width: 200px;
+	height: 200px;
+}
+
+.text {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
+.basket-title {
+	background-color: white;
+	margin: 5px;
+	display: flex;
+}
+
+.basket-btn {
+	display: flex;
+	justify-content: center;
 }
