--- a/Store/stylesheet/stylesheet.css
+++ b/Store/stylesheet/stylesheet.css
@@ -139,6 +139,15 @@ footer {
 	height: 40px;
 	text-align: right;
 	padding-right: 22%;
+	position: absolute;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+}
+
+.wrapper {
+	position: relative;
+	min-height: 100%;
 }
 
 .price {
